--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-<!------ Include the above in your HEAD tag ---------->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,7 +13,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 	<!--Custom style-->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <div class="container">
@@ -31,25 +28,25 @@
 				</div> -->
 			</div>
 			<div class="card-body">
+				<div class="alert " role="alert"></div>
 				<form>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="username" required>
-						
+						<input type="text" class="form-control" placeholder="username" id="username" required>
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="password" required>
+						<input type="password" class="form-control" placeholder="password" id="password" required>
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<input type="submit" value="Login" class="btn float-right login_btn">
+						<input type="submit" value="Login" class="btn float-right login_btn" id="loginBtn">
 					</div>
 				</form>
 			</div>
@@ -64,5 +61,7 @@
 		</div>
 	</div>
 </div>
+<script src="js/jquery.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
