--- a/welcome page.html
+++ b/welcome page.html
@@ -58,7 +58,7 @@
             </div>
 
             <div id="two">
-                <h1>WELCOME TO BLIND TECHY!</h1>
+                <h1>WELCOME TO TECHY BLINDERS!</h1>
             </div>
             <div>
                 <a href="#" class="button">Logout</a>
