--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<input type="submit" value="Login" class="btn float-right login_btn" id="loginBtn">
+						<a href="https://olasumbo-eniola.github.io/Welcome-Page/ input type="submit" value="Login" class="btn float-right login_btn" id="loginBtn">
 					</div>
 				</form>
 			</div>
