--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<a href="https://olasumbo-eniola.github.io/Welcome-Page/ id="loginBtn" input type="submit" value="Login" class="btn float-right login_btn">
+						<a href="https://olasumbo-eniola.github.io/Welcome-Page/ id="button" input type="submit" value="Login" class="btn float-right login_btn"></a>
 					</div>
 				</form>
 			</div>
